[workspace]
resolver = "2"
members = ["secret-sdk-proto", "secret-grpc", "secretrs"]
exclude = ["proto-build", "secret-utils"]

# This patch adds target_arch = "wasm32" configurations to the rpc clients
[patch.crates-io]
tendermint = { git = "https://github.com/kent-3/tendermint-rs", branch = "wasm", version = "0.35" }
tendermint-proto = { git = "https://github.com/kent-3/tendermint-rs", branch = "wasm", version = "0.35" }
tendermint-rpc = { git = "https://github.com/kent-3/tendermint-rs", branch = "wasm", version = "0.35" }
