[package]
name = "proto-build"
version = "0.1.0"
authors = [
  "Justin Kilpatrick <justin@althea.net>",
  "Tony Arcieri <tony@iqlusion.io>",
  "Kent",
]
edition = "2021"
publish = false

[dependencies]
prost-build = "0.13"
tonic-build = "0.12"
regex = "1"
walkdir = "2"
log = "0.4"
pretty_env_logger = "0.5"
