[package]
name = "openapi"
version = "1.12.1"
authors = ["OpenAPI Generator team and contributors"]
description = "A REST interface for queries and transactions"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "socks", "rustls-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.14", features = ["js"] }

[dev-dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
color-eyre = { version = "0.6", default-features = false }
