[package]
name = "secret-grpc"
version = "0.1.0"
authors = ["Kent"]
license = "Unlicense"
edition = "2021"
publish = false

[dependencies]
# blockchain
cosmwasm-std = { version = "=1.1.11", package = "secret-cosmwasm-std" }
bip32 = "0.5.1"
bip39 = "2.0.0"

# general
async-trait = "0.1.80"
serde = "1.0.198"
serde_json = "1.0.116"
nanorand = "0.7.0"
log = "0.4.21"
prost = "0.12.4"

# crypto
base64 = "0.22.0"
hex = "0.4.3"
hkdf = "0.12.4"
sha2 = "0.10.8"
aes-siv = "0.7.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

# errors
thiserror = "1.0.51"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# secret-sdk-proto = { version = "0.0" }
cosmrs = { version = "0.16.0", features = ["bip32", "rpc", "grpc"] }
secretrs = { features = ["bip32", "rpc", "grpc"], path = "../secretrs" }
tonic = { version = "0.11.0", features = ["tls", "tls-webpki-roots", "transport"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# secret-sdk-proto = { version = "0.0", default-features = false, features = ["grpc"] }
cosmrs = { version = "0.16.0", features = ["bip32", "rpc", "grpc-core"] }
secretrs = { features = ["bip32", "rpc", "grpc-core"], path = "../secretrs" }
nanorand = { version = "0.7.0", features = ["getrandom", "zeroize"] }
getrandom = { version = "0.2.14", features = ["js"] }
tonic-web-wasm-client = "0.5.1"

[dev-dependencies]
tokio = { version = "1.37", features = ["rt", "sync", "time", "macros"] }
color-eyre = "0.6"
pretty_env_logger = "0.5"
