[package]
name = "secret-sdk-proto"
version = "0.1.0"
authors = ["Kent"]
license = "Apache-2.0"
repository = "https://github.com/kent-3/secret-rust/tree/main/secret-sdk-proto"
description = "Protobuf stuct defintions for interacting with Secret"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["blockchain", "cosmos", "tendermint", "proto"]
edition = "2021"
rust-version = "1.72"

[dependencies]
prost = "0.12.4"
prost-types = "0.12.4"
cosmos-sdk-proto = { version = "0.21.1", default-features = false }

# Optional dependencies
tonic = { version = "0.11.0", optional = true, default-features = false, features = ["codegen", "prost"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.14", features = ["js"] }

[features]
default = ["grpc-transport"]
grpc = ["tonic", "cosmos-sdk-proto/grpc"]
grpc-transport = ["grpc", "tonic/transport", "cosmos-sdk-proto/grpc-transport"]
