[package]
name = "secret-sdk-proto"
version = "0.1.2"
authors = ["Kent"]
license = "Unlicense"
repository = "https://github.com/kent-3/secret-rust/tree/main/secret-sdk-proto"
description = "Protobuf struct definitions for interacting with Secret"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["blockchain", "cosmos", "tendermint", "proto"]
edition = "2021"
rust-version = "1.72"

[dependencies]
prost = "0.13.1"
prost-types = "0.13.1"
cosmos-sdk-proto = { version = "0.25.0", default-features = false }

# Optional dependencies
tonic = { version = "0.12.3", optional = true, default-features = false, features = ["codegen", "prost"] }

# Downgraded to support 1.72
bumpalo = "=3.14.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }

[features]
default = ["grpc-transport"]
grpc = ["tonic", "cosmos-sdk-proto/grpc"]
grpc-transport = ["grpc", "tonic/transport", "cosmos-sdk-proto/grpc-transport"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
