[package]
name = "secret-utils"
version = "0.0.0"
authors = ["Kent"]
license = "Unlicense"
repository = "https://github.com/kent-3/secret-rust/tree/main/secret-utils"
# description = ""
readme = "README.md"
edition = "2021"

[dependencies]
# blockchain
cosmwasm-std = { version = "=1.1.11", package = "secret-cosmwasm-std" }
cosmrs = { version = "0.16.0 ", features = ["bip32"] }
bip32 = "0.5.1"
bip39 = "2.0.0"

# general
async-trait = "0.1.80"
serde = "1.0.198"
serde_json = "1.0.116"
nanorand = { version = "0.7.0", features = ["getrandom", "zeroize"] }

# crypto
base64 = "0.22.0"
hex = "0.4.3"
hkdf = "0.12.4"
sha2 = "0.10.8"
aes-siv = "0.7.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

# errors
thiserror = "1.0.51"

[dev-dependencies]
tokio = { version = "1.37", features = ["rt", "sync", "macros"] }
color-eyre = "0.6"
regex = "1"
