[package]
name = "secretrs"
version = "0.1.2"
authors = ["Kent"]
license = "Unlicense"
repository = "https://github.com/kent-3/secret-rust/tree/main/secretrs"
description = "An extension of `cosmrs` for Secret."
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["blockchain", "cosmos"]
edition = "2021"
rust-version = "1.72"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[features]
default = ["bip32", "getrandom", "grpc-core"]
bip32 = ["cosmrs/bip32"]
rpc = ["cosmrs/rpc"]
getrandom = ["cosmrs/getrandom"]
grpc-core = ["cosmrs/grpc-core", "secret-sdk-proto/grpc"]
grpc = ["grpc-core", "cosmrs/grpc", "secret-sdk-proto/grpc-transport", "tonic/transport"]

[[example]]
name = "encrypt"
path = "examples/encrypt.rs"

[[example]]
name = "query"
path = "examples/query.rs"
required-features = ["grpc"]

[[example]]
name = "tx"
path = "examples/tx.rs"
required-features = ["grpc"]

[[example]]
name = "contract_query"
path = "examples/contract_query.rs"
required-features = ["grpc"]

[dependencies]
# blockchain
cosmrs = { version = "0.20.0" }
secret-sdk-proto = { version = "0.1.2", default-features = false, path = "../secret-sdk-proto" }
ibc-proto = "0.49.0"
cosmwasm-std = { version = "=1.1.11", package = "secret-cosmwasm-std" }
bip32 = "0.5.2"
bip39 = "2.0.0"

# general
async-trait = "0.1.83"
serde = "1.0.210"
serde_json = "1.0.128"
serde-json-wasm = "0.5.2"
nanorand = { version = "0.7.0", features = ["getrandom", "zeroize"] }
# Downgraded to support 1.72
derive_more = { version = "=1.0.0-beta.6", default-features = false, features = ["from"] }
regex = "1.11.0"
log = "0.4.22"
env_logger = "0.11.5"

# crypto
base64 = "0.22.1"
hex = "0.4.3"
hex-literal = "0.4.1"
hkdf = "0.12.4"
sha2 = "0.10.8"
aes-siv = "0.7.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
curve25519-dalek = "4.1.3"

# errors
thiserror = "1.0.64"

# gRPC
tonic = { version = "0.12.3", optional = true, default-features = false, features = ["codegen", "prost"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }

[dev-dependencies]
# Downgraded to support 1.72
tokio = { version = "=1.38.1", features = ["rt", "sync", "time", "macros"] }
color-eyre = "0.6.3"
anyhow = "1.0.89"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tonic-web-wasm-client = "0.6.0"
wasm-bindgen-test = "0.3.43"
